# ipcheck

./: .cursorrules  Cargo.toml  README.md  app_config.json  cursor-sandbox-apparmor.deb
data/: ipcheck.db
docs/: ARCHITECTURE.md
packaging/debian/: ipcheck.desktop  ipcheck.metainfo.xml
scripts/: package-deb.sh  package-linux-tarball.sh  package-windows-zip.sh
src/: main.rs
src/app/: mod.rs  mod_helpers.rs  mod_impl_main.rs  mod_impl_main_update.inc.rs  mod_impl_main_view.inc.rs  mod_impl_views.rs  mod_prelude.rs
src/config/: app_config.rs
src/domain/: models.rs
src/repository/: mod.rs  sqlite_repo.rs
src/service/ip_service/: baidu_api.rs  error.rs  http_client.rs  http_headers.rs  ip_probe.rs  mod.rs  proxy_parse.rs
